# QuoteVault

./: .gitignore  README.md  pyproject.toml
quote_scraper/: logger.py  logger_class.py  main.py  save.py  scraper.py  utils.py
