[tool.poetry]
name = "quotevault"
version = "0.1.0"
description = "Scrape quotes and authors, then store and manage them in MongoDB using Python."
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.3.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
